z-index issue with the button fixed

--- a/webapp/src/components/goals/styles/goal-list-item.scss
+++ b/webapp/src/components/goals/styles/goal-list-item.scss
@@ -39,8 +39,7 @@ $imgContHeight: 54px;
   &__title {
     width: calc(100% - 50px);
     color: $deepBlue-80;
-    font-size: 18px;
-    line-height: 1.33;
+    font-size: 16px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
