--- a/webapp/src/components/goals/styles/goals.scss
+++ b/webapp/src/components/goals/styles/goals.scss
@@ -27,7 +27,7 @@
   position: fixed;
   right: 21px; bottom: 21px;
   transition: all .2s ease-in-out;
-  z-index: 2;
+  z-index: 5;
 
   &:hover {
     transition: all .2s ease-in-out;
